kratos-keto-oathkeeper-k8s/oathkeeper/deployment-controller.yaml
# Source: oathkeeper/templates/deployment-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-oathkeeper
  namespace: default
  labels:
    app.kubernetes.io/name: oathkeeper
    app.kubernetes.io/version: "v0.38.25-beta.1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: oathkeeper
  template:
    metadata:
      labels:
        app.kubernetes.io/name: oathkeeper
        app.kubernetes.io/version: "v0.38.25-beta.1"
    spec:
      volumes:
        - name: oathkeeper-config-volume
          configMap:
            name: oathkeeper-config
        - name: oathkeeper-rules-volume
          configMap:
            name: oathkeeper-rules
        - name: oathkeeper-secrets-volume
          secret:
            secretName: oathkeeper-jwk
      containers:
        - name: oathkeeper
          image: "oryd/oathkeeper:v0.38.25-beta.1"
          imagePullPolicy: IfNotPresent
          command:
            ["oathkeeper", "serve", "--config", "/etc/config/config.yaml"]
          volumeMounts:
            - name: oathkeeper-config-volume
              mountPath: /etc/config
              readOnly: true
            - name: oathkeeper-rules-volume
              mountPath: /etc/rules
              readOnly: true
            - name: oathkeeper-secrets-volume
              mountPath: /etc/secrets
              readOnly: true
          ports:
            - name: oath-api
              containerPort: 4456
              protocol: TCP
            - name: oath-proxy
              containerPort: 4455
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health/alive
              port: oath-api
          readinessProbe:
            httpGet:
              path: /health/ready
              port: oath-api
