kratos-keto-oathkeeper-k8s/oathkeeper/test-connection.yaml
# Source: oathkeeper/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "test-oathkeeper-test-connection"
  namespace: default
  labels:
    app.kubernetes.io/name: oathkeeper
    app.kubernetes.io/version: "v0.38.25-beta.1"
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: liveness-probe
      image: busybox
      command: ["wget"]
      args: ["http://test-oathkeeper-api:4456/health/alive"]
    - name: readiness-probe
      image: busybox
      command: ["wget"]
      args: ["http://test-oathkeeper-api:4456/health/ready"]
  restartPolicy: Never
